# flutter-gtk-embedding

./: CMakeLists.txt  README.md
contrib/: cmake-build-example.sh
src/: my_application.cc  my_application.h
